--- a/src/app/components/main-form/main-form.component.html
+++ b/src/app/components/main-form/main-form.component.html
@@ -24,7 +24,7 @@
                 <div class="form-group" >
                     <div class="col-md-6">
                         <mat-form-field class="example-full-width">
-                            <input type="text" matInput placeholder="Label of Input" (input)="onlabel($event.target.value,'label')" >
+                            <input type="text" matInput placeholder="Label of Input" (click)="formsreset()" (input)="onlabel($event.target.value,'label')" >
                           </mat-form-field>
                     </div>
 
