--- a/src/app/components/main-form/main-form.component.css
+++ b/src/app/components/main-form/main-form.component.css
@@ -1,9 +1,32 @@
 mat-card{
   border-top: 10px solid #2DB0ED;
 }
+.mat-form-field {
+     display: inline;
+    position: relative;
+    text-align: left;
+}
 
 a{
   cursor: pointer;
 }
 
+.typeInput{
+  padding-left:50px;
+}
+.mat-card-title {
+  font-size: 20px;
+  font-weight: 400;
+}
+.inphight{
+  height:30px;
+}
+
+
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
